add_subdirectory(motorsettings)
add_subdirectory(skeletonjoint)
add_subdirectory(ragdollpart)
add_subdirectory(softbodysharedsettings)
add_subdirectory(hermitepath)
add_subdirectory(hingeconstraint_motor)
add_subdirectory(swingtwistconstraint_motor)
add_subdirectory(sliderconstraint)
add_subdirectory(sixdofconstraint)
add_subdirectory(coneconstraint)
add_subdirectory(physicssystem_timestepping)
add_subdirectory(physicssteplistener)
add_subdirectory(physicsskeleton)
add_subdirectory(ragdoll)
add_subdirectory(gearconstraint)
add_subdirectory(rackandpinionconstraint)
add_subdirectory(pulleyconstraint)
add_subdirectory(hermitepath_integration)
add_subdirectory(pathconstraint)
add_subdirectory(physicsstate)
add_subdirectory(softbody)
add_subdirectory(softbodycontactlistener)
